# sqlite-watcher

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: rusqlite.rs  sqlx.rs
src/: connection.rs  lib.rs  watcher.rs
src/connection/: rusqlite.rs  sqlx.rs
